# otomo_plugins

./: .gitignore  CMakeLists.txt  README.md  controller_plugins.xml  package.xml  plugins.xml  robot_hardware.xml
include/otomo_plugins/: config.hpp  kiss_tnc.hpp  otomo_controller.hpp  otomo_diffdrive.hpp  pid_params.hpp  wheel.hpp
src/diffdrive_test/: diffdrive_test_node.cpp
src/kiss_serial/: kiss_decode.cpp  kiss_encode.cpp
src/otomo_controller/: otomo_controller.cpp
src/otomo_diffdrive/: otomo_diffdrive.cpp
